--- a/styles/titles.css
+++ b/styles/titles.css
@@ -2,14 +2,15 @@
     font-family: 'Times New Roman';
     font-weight: 900;
     font-size: large;
-    margin-bottom: 10px;
+    margin-bottom: 1rem;
+    text-align: center
 }
 
 .subtitle{
     font-family: 'Times New Roman';
     font-weight: 900;
     font-size: large;
-    margin-bottom: 10px;
+    margin-bottom: 1rem;
 }
 
 .body{
@@ -21,4 +22,8 @@
 .header{
     font-family: 'Times New Roman';
     font-weight: 900;
+}
+
+.experience-item{
+    max-width: 27.5rem;
 }
