--- a/styles/titles.css
+++ b/styles/titles.css
@@ -24,7 +24,7 @@
 .section-title{
     font-family: 'Times New Roman';
     margin-top: 1rem;
-    text-align: center;
+    text-align: left;
     font-size: medium;
 }
 
