--- a/styles/titles.css
+++ b/styles/titles.css
@@ -39,7 +39,7 @@
 
 .container {
   display: grid;
-  grid-template-columns: auto auto auto;
+  grid-template-columns: 50% 50%;
 }
 
 ul.experience-item li { margin-bottom: 0.5rem;  font-size: medium}
